@@ -29,7 +29,7 @@ DFT_BIN=~/espresso/bin
 TMPDIR=/scratch/WanT_TMP
 
 PARA_PREFIX=
-PARA_POSTFIX=
+PARA_POSTFIX= 
 
 
 #      ***** usually, do NOT modify below this line ***** 
